add javascript function search

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,7 @@ body {
 a {
   color: rgb(196, 212, 244);
 }
+
 .container {
   max-width: 550px;
   background: linear-gradient(
@@ -18,14 +19,13 @@ a {
   );
   color: rgb(196, 212, 244);
   margin: 80px auto;
+  padding: 45px;
   border: none;
   border-radius: 20px;
 }
 .current-weather {
   display: flex;
   justify-content: space-between;
-  margin: 30px;
-  padding: 20px;
 }
 .icon {
   font-size: 80px;
@@ -34,7 +34,7 @@ a {
   font-size: 80px;
 }
 .search-form {
-  padding: 20px;
+  margin-top: 15px;
 }
 .search-form-input {
   padding: 15px;
@@ -56,11 +56,9 @@ a {
     rgb(63, 76, 119) 70.2%
   );
 }
-p {
-  margin: 30px;
-}
+
 .weather-forecast {
-  margin: 30px;
+  margin-top: 20px;
 }
 .min-temp {
   opacity: 0.6;
@@ -71,7 +69,6 @@ hr {
     rgb(244, 219, 251) 29.3%,
     rgb(255, 214, 214) 67.1%
   );
-  max-width: 85%;
 }
 footer {
   font-size: 11px;
