--- a/src/styles.css
+++ b/src/styles.css
@@ -23,6 +23,9 @@ a {
   border: none;
   border-radius: 20px;
 }
+.location {
+  font-size: 25px;
+}
 .current-weather {
   display: flex;
   justify-content: space-between;
@@ -58,7 +61,16 @@ a {
 }
 
 .weather-forecast {
+  display: flex;
+  justify-content: space-around;
   margin-top: 20px;
+}
+.weather-forecast-date {
+  text-align: center;
+}
+.weather-forecast-icon {
+  text-align: center;
+  font-size: 50px;
 }
 .min-temp {
   opacity: 0.6;
